portainer-agent-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"portainer"},"name":"portainer-agent","namespace":"portainer"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"portainer-agent"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate"},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"portainer-agent"}},"spec":{"c [...]
      \"portainer-agent-758674df8d\" has successfully
      progressed.","reason":"NewReplicaSetAvailable","status":"True","type":"Progressing"},{"lastTransitionTime":"2022-09-29T16:04:59Z","lastUpdateTime":"2022-09-29T16:04:59Z","message":"Deployment
      has minimum
      availability.","reason":"MinimumReplicasAvailable","status":"True","type":"Available"}],"observedGeneration":1,"readyReplicas":1,"replicas":1,"updatedReplicas":1}}
  creationTimestamp: '2022-09-27T21:40:17Z'
  generation: 5
  labels:
    app.kubernetes.io/instance: portainer
  name: portainer-agent
  namespace: portainer
  resourceVersion: '2214898'
  uid: ac0f6b7e-b495-440e-b867-bf6496789470
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: portainer-agent
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: portainer-agent
    spec:
      containers:
        - env:
            - name: LOG_LEVEL
              value: DEBUG
            - name: AGENT_CLUSTER_ADDR
              value: portainer-agent-headless
            - name: KUBERNETES_POD_IP
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: status.podIP
          image: 'portainer/agent:2.15.1'
          imagePullPolicy: Always
          name: portainer-agent
          ports:
            - containerPort: 9001
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: portainer-sa-clusteradmin
      serviceAccountName: portainer-sa-clusteradmin
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: '2022-09-27T21:40:17Z'
      lastUpdateTime: '2022-09-27T21:40:20Z'
      message: ReplicaSet "portainer-agent-758674df8d" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: 'True'
      type: Progressing
    - lastTransitionTime: '2022-09-29T16:31:22Z'
      lastUpdateTime: '2022-09-29T16:31:22Z'
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: 'True'
      type: Available
  observedGeneration: 5
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
