portainer-agent.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: portainer
  name: portainer-agent
  namespace: portainer
spec:
  clusterIP: 10.109.10.237
  clusterIPs:
  - 10.109.10.237
  externalIPs:
  - 10.241.118.102
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: portainer-agent
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
