d-ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: d-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: web.cx.one.pl
    http:
      paths:
      - backend:
          service:
            name: ng-service
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
